--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -288,7 +288,7 @@
     <bool>true</bool>
    </property>
    <property name="checked">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="text">
     <string>采集说明</string>
